--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
     <!-- <script src="rwb_widget.js" charset="utf-8"></script> -->
     <script src="user_widget.js" charset="utf-8"></script>
+    <script src="campaignlist_widget.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
     <script src="clientlib.js" charset="utf-8"></script>
     
