Fire selected callback from campaignlist widget.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>demo</title>
         <link rel="stylesheet" href="rwb_widget.css">
+        <link rel="stylesheet" href="campaignlist_widget.css">
     </head>
     <body>
 
