--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
-    <!-- <script src="rwb_widget.js" charset="utf-8"></script> -->
+    <script src="rwb_widget.js" charset="utf-8"></script>
     <script src="user_widget.js" charset="utf-8"></script>
     <script src="campaignlist_widget.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
