campaign_widget written and wired in

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,14 @@
         </div>
     </div>
     
-    <div id="rwb-widget">
+    <div id="campaign-container">
+        <button id="campaign-clone">Clone</button>
+        <button id="campaign-delete">Delete</button>
+        <div id="campaign-thecampaign"></div>
     </div>
 
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
+    <script src="campaign_widget.js" charset="utf-8"></script>
     <script src="rwb_widget.js" charset="utf-8"></script>
     <script src="user_widget.js" charset="utf-8"></script>
     <script src="campaignlist_widget.js" charset="utf-8"></script>
