--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,8 @@
     </div>
     
     <div id="campaign-container">
+        <button id="campaign-new">NEW</button>
+        <button id="campaign-save">SAVE</button>
         <button id="campaign-clone">Clone</button>
         <button id="campaign-delete">Delete</button>
         <div id="campaign-thecampaign"></div>
