Create User gets its own view

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,14 @@
                 <button id="user-changepw-button">Change password</button>
                 <button id="user-changepw-cancel">Cancel</button>
             </div>
+            <div id="user-state-createnew">
+                <div id="user-createnew-message1">Create new user:</div>
+                Username:<input id="user-createnew-username">
+                Password:<input id="user-createnew-password1">
+                Confirm password:<input id="user-createnew-password2">
+                <button id="user-createnew-button">Create New</button>
+                <button id="user-createnew-cancel">Cancel</button>
+            </div>
 
         </div>
         
