Saving indicator that flashes on the screen, but doesn't have to be dismissed like an alert.

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
         <button id="campaign-save">SAVE</button>
         <button id="campaign-clone">Clone</button>
         <button id="campaign-delete">Delete</button>
+        <span id="campaign-message"></span>
         <div id="campaign-thecampaign"></div>
     </div>
 
