Cleaned up RwbWidget

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,12 @@
         <span id="campaign-message"></span>
         <div id="campaign-thecampaign"></div>
     </div>
+    
+    <div id="hintbox">
+        <h2 id="hintbox-label"></h2>
+        <div id="hintbox-content"></div>
+        <button id="hintbox-close">Close</button>
+    </div>
 
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
     <script src="campaign_widget.js" charset="utf-8"></script>
