--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 <div id="user-notloggedin-message1">Login:</div>
                 <div id="user-notloggedin-message2">   </div>
                 Username:<input id="user-username">
-                Password:<input id="user-password">
+                Password:<input id="user-password" type="password">
                 <button id="user-loginbutton" class="user-button-primary">Log In</button>
                 <button id="user-new-button">Create new user</button>
             </div>
@@ -31,16 +31,16 @@
             <div id="user-state-changingpw">
                 <div id="user-changeingpw-message1">Changing password:</div>
                 Old pssword:<input id="user-changepw-old">
-                New password:<input id="user-changepw-new1">
-                Confirm password: <input id="user-changepw-new2">
+                New password:<input id="user-changepw-new1" type="password">
+                Confirm password: <input id="user-changepw-new2" type="password">
                 <button id="user-changepw-button">Change password</button>
                 <button id="user-changepw-cancel">Cancel</button>
             </div>
             <div id="user-state-createnew">
                 <div id="user-createnew-message1">Create new user:</div>
                 Username:<input id="user-createnew-username">
-                Password:<input id="user-createnew-password1">
-                Confirm password:<input id="user-createnew-password2">
+                Password:<input id="user-createnew-password1" type="password">
+                Confirm password:<input id="user-createnew-password2" type="password">
                 <button id="user-createnew-button">Create New</button>
                 <button id="user-createnew-cancel">Cancel</button>
             </div>
