--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
     
         <div id="user-container">
             <div id="user-state-notloggedin">
-                <div id="user-notloggedin-message1">Login:</div>
                 <div id="user-notloggedin-message2">   </div>
                 Username:<input id="user-username">
                 Password:<input id="user-password" type="password">
@@ -29,8 +28,7 @@
                 <a href="#" id="user-deleteuser">delete user</a>
             </div>
             <div id="user-state-changingpw">
-                <div id="user-changeingpw-message1">Changing password:</div>
-                Old pssword:<input id="user-changepw-old">
+                Old password:<input id="user-changepw-old">
                 New password:<input id="user-changepw-new1" type="password">
                 Confirm password: <input id="user-changepw-new2" type="password">
                 <button id="user-changepw-button">Change password</button>
