Clean up unused elements in User widget and bold the username when logged in.

--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,14 @@
     
         <div id="user-container">
             <div id="user-state-notloggedin">
-                <div id="user-notloggedin-message2">   </div>
+                <div id="user-notloggedin-message">   </div>
                 Username:<input id="user-username">
                 Password:<input id="user-password" type="password">
                 <button id="user-loginbutton" class="user-button-primary">Log In</button>
                 <button id="user-new-button">Create new user</button>
             </div>
             <div id="user-state-loggedin">
-                <div id="user-loggedin-message1">Logged in as:</div>
-                <div id="user-loggedin-message2"></div>
+                <div id="user-loggedin-message"></div>
                 <button id="user-logout-button">Logout</button>
                 <button id="user-gotochangepw-button">Change password</button>
                 <a href="#" id="user-deleteuser">delete user</a>
