Save box works (but is ugly)

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,12 @@
         <div id="campaign-thecampaign"></div>
     </div>
     
+    <div id="savebox">
+        <div id="savebox-label"></div>
+        <textarea id="savebox-content"></textarea>
+        <button id="savebox-close">Close</button>
+    </div>
+    
     <div id="hintbox">
         <h2 id="hintbox-label"></h2>
         <div id="hintbox-content"></div>
