Print (to pdf) as the save option when you're not logged in.

--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,11 @@
     </div>
     
     <div id="savebox">
-        <div id="savebox-label"></div>
-        <textarea id="savebox-content"></textarea>
-        <button id="savebox-close">Close</button>
+        <div id="savebox-controls">Not logged in.
+            <button id="savebox-print">Print/Save</button>
+            <button id="savebox-close">Close</button>
+        </div>
+        <div id="savebox-content"></div>
     </div>
     
     <div id="hintbox">
