--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
     </div>
 
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
+    <script src="util.js" charset="utf-8"></script>
     <script src="campaign_widget.js" charset="utf-8"></script>
     <script src="rwb_widget.js" charset="utf-8"></script>
     <script src="user_widget.js" charset="utf-8"></script>
