--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
     <div id="campaign-container">
         <button id="campaign-new">NEW</button>
         <button id="campaign-save">SAVE</button>
+        <button id="campaign-import">Import</button>
         <button id="campaign-clone">Clone</button>
         <button id="campaign-delete">Delete</button>
         <span id="campaign-message"></span>
