--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 <div id="user-notloggedin-message">   </div>
                 Username:<input id="user-username">
                 Password:<input id="user-password" type="password">
-                <button id="user-loginbutton" class="user-button-primary">Log In</button>
+                <button id="user-login-button" class="user-button-primary">Log In</button>
                 <button id="user-new-button">Create new user</button>
             </div>
             <div id="user-state-loggedin">
