--- a/public/index.html
+++ b/public/index.html
@@ -74,10 +74,9 @@
 
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
     <script src="util.js" charset="utf-8"></script>
-    <script src="campaign_widget.js" charset="utf-8"></script>
-    <script src="rwb_widget.js" charset="utf-8"></script>
-    <script src="user_widget.js" charset="utf-8"></script>
-    <script src="campaignlist_widget.js" charset="utf-8"></script>
+    <script src="model.js" charset="utf-8"></script>
+    <script src="controller.js" charset="utf-8"></script>
+    <script src="views.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
     <script src="clientlib.js" charset="utf-8"></script>
     
