--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>demo</title>
-        <link rel="stylesheet" href="user_widget.css">
-        <link rel="stylesheet" href="rwb_widget.css">
-        <link rel="stylesheet" href="campaignlist_widget.css">
-        <link rel="stylesheet" href="main.css">
+        <title>RPG World Builder</title>
+        <link rel="stylesheet" href="rpgworldbuilder.css">
     </head>
     <body>
 
