Max width and centering

--- a/public/rpgworldbuilder.html
+++ b/public/rpgworldbuilder.html
@@ -5,7 +5,7 @@
         <title>RPG World Builder</title>
         <link rel="stylesheet" href="rpgworldbuilder.css">
     </head>
-    <body>
+    <body><div id="pagewrap">
 
     <div id="controls-container">
     
@@ -74,6 +74,6 @@
     <script src="main.js" charset="utf-8"></script>
     <script src="clientlib.js" charset="utf-8"></script>
     
-  </body>
+</div></body>
 </html>
 
