--- a/public/rpgworldbuilder.html
+++ b/public/rpgworldbuilder.html
@@ -46,8 +46,11 @@
     <div id="campaign-container">
         <button id="campaign-new">NEW</button>
         <button id="campaign-save">SAVE</button>
-        <button id="campaign-import">Import</button>
         <button id="campaign-clone">Clone</button>
+        <div id="campaign-addto-container">
+            <button id="campaign-addto-button">Add to</button>
+            <select id="campaign-addto-list"></select>
+        </div>
         <button id="campaign-delete">Delete</button>
         <span id="campaign-message"></span>
         <div id="campaign-thecampaign"></div>
