Styled with black background

--- a/public/rpgworldbuilder.html
+++ b/public/rpgworldbuilder.html
@@ -5,17 +5,17 @@
         <title>RPG World Builder</title>
         <link rel="stylesheet" href="rpgworldbuilder.css">
     </head>
-    <body><div id="pagewrap">
+    <body>
 
     <div id="controls-container">
     
         <div id="user-container">
             <div id="user-message">   </div>
             <div id="user-state-notloggedin">
-                Username:<input id="user-username">
-                Password:<input id="user-password" type="password">
+                Username:<input id="user-username"></input>
+                Password:<input id="user-password" type="password"></input>
                 <button id="user-login-button" class="user-button-primary">Log In</button>
-                <button id="user-new-button">Create new user</button>
+                <button id="user-new-button">New user</button>
             </div>
             <div id="user-state-loggedin">
                 <button id="user-logout-button">Logout</button>
@@ -77,6 +77,6 @@
     <script src="main.js" charset="utf-8"></script>
     <script src="clientlib.js" charset="utf-8"></script>
     
-</div></body>
+</body>
 </html>
 
