--- a/public/rpgworldbuilder.html
+++ b/public/rpgworldbuilder.html
@@ -20,7 +20,7 @@
             <div id="user-state-loggedin">
                 <button id="user-logout-button">Logout</button>
                 <button id="user-gotochangepw-button">Change password</button>
-                <a href="#" id="user-deleteuser">delete user</a>
+                <!-- <a href="#" id="user-deleteuser">delete user</a> -->
             </div>
             <div id="user-state-changingpw">
                 Old password:<input id="user-changepw-old">
