Few more edits.

--- a/public/index.html
+++ b/public/index.html
@@ -109,8 +109,6 @@ clone and modify other peoples' ideas, or add them into your own.</p>
         for adventuring.</p>
         <p>In many fantasy RPGs, PCs seek out members of an &quot;enemy&quot; species, kill them, and take their stuff.</p>
         <p>Robin Hood was technially a bandit. But occupiers and opressors can exuse plenty of fun and profitable crime.</p>
-        <p>And many cyberpunk adventures are technically crimes, set in a world where corporate power trumps
-        government power, and anything corporate is fair game for people trying to survive on the Street.</p>
     </div>
     <div class="hint">
         <h3>Quest</h3>
@@ -126,7 +124,7 @@ clone and modify other peoples' ideas, or add them into your own.</p>
     <div class="hint">
         <h3>Personal Mission</h3>
         <p>Or &quot;personal quest&quot;. The PCs are doing something because they just really want to do it, or because they deeply believe it should be done.</p><p>They are driven to become the worlds greatest swordsman, to advance science, prove the Hollow Earth is real, or bring back Atlanntis.</p><p>A PC with a personal quest and a personal fortune can employ like-minded PCs in Jobs With Missions.</p>
-        <p>The PCs' personal mission could also be an extended hunt....................</p>
+        <p>The PCs' personal mission could also be an extended hunt or mystery.</p>
     </div>
     <div class="hint">
         <h3>Need</h3>
