--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@ clone and modify other peoples' ideas, or add them into your own.</p>
     some structure to let you plan some things in advance.</p>
     <p>And a clear formula also helps the players and speeds up play. We've all had that slow starting
     game where the players can't quite find the adventure. So a little clarity makes everyone's live better.</p>
+    <p>Of course, you can run any kind of adventure in your actual campaign. Drivers are an engine and a safty net, not a cage.</p>
     <p>You can also use these as inspiration, or as a design challenge. Pick two drivers, along with the
     culture, technology, and magic found in the world... then try to make it work.</p>
     <div class="hint">
@@ -173,6 +174,8 @@ clone and modify other peoples' ideas, or add them into your own.</p>
     <div class="short-hint">
         <h3>Healing</h3>
         <p>Medic!!!</p>
+        <p>PCs care about anyone or anything that can heal their combat damage. And healing potions
+        and med-paks are a consumable resource, too.</p>
     </div>
     <div class="short-hint">
         <h3>Tools</h3>
@@ -220,6 +223,12 @@ clone and modify other peoples' ideas, or add them into your own.</p>
         <p>Humans can learn to do many things. And being exceptionally good at something is pretty cool.</p>
     </div>
     <div class="short-hint">
+        <h3>Training</h3>
+        <p>Players care about increasing skills. So don't pass that off with some boring math. You
+        can have mentors, apprenticeships, schools, guilds, and the secret technique of any group.</p>
+        <p>And magic and cyberpunk offer their own special options.</p>
+    </div>
+    <div class="short-hint">
         <h3>Social status</h3>
         <p>People like you, or obey you, or fear you, or at least have a taboo against killing you, etc.</p>
         <p>Usually, status comes with membership in some group.</p>
@@ -241,6 +250,9 @@ clone and modify other peoples' ideas, or add them into your own.</p>
 <div class="field">
     <h2>Sides</h2>
     <p>Groups or important individuals, or dragons or gods, etc. These can be outright foes, or anyone with interests different enough that you might have to negotiate with them.</p>
+    <p>Groups and include all the PCs, some of the PCs, or none of the PCs. They can be friend or foe,
+    large or small, fammiliar or strange, and strong or weak.
+    <p>And these are sources of many NPCs. Do yourself a favor and make them fun to play</p>
     <div class="hint">
         <h3>Government</h3>
         
