Removed Secret War. It does not directly send PCs on adventures.

--- a/public/index.html
+++ b/public/index.html
@@ -97,10 +97,6 @@ clone and modify other peoples' ideas, or add them into your own.</p>
         <p>The PCs can be an elite team, or new recruits. Or they might work in an obscure corner of some vast bureaucracy.  And the varieties of jobs are endless. Consider The X-Files, Men in Black, Stargate, Sanctuary, Outland, Judge Dee, Agents of Shield, Battlestar Galactica, all the Star Treks, western sherifs, Blade Runner, Mission Impossible, and Torchwood.</p>
     </div>
     <div class="hint">
-        <h3>Secret War</h3>
-        <p>The secret part allows the setting to look like our everyday world. (Or the everyday medieval world, etc.)</p><p>Secret War is often combined with Agents. But PCs can be pulled into a fight without formally signing up: Vampires vs Werewolves, Imortals vs Imortals, etc. Characters can be part of one side by birth, or sucked in when they learn the secret.</p>
-    </div>
-    <div class="hint">
         <h3>Freelancers</h3>
         <p>Paid freelancers include Ghostbusters(tm), private detectives, bodyguards, bounty hunters, assassins, hackers, mercenaries, etc. PCs can be guns for hire, swords for hire, spells for hire, cyberdecks for hire, or have fast ships, or other vehicles, for hire.</p><p>The PCs are contacted by their customers, and paid to go on adventures.</p>
     </div>
@@ -118,7 +114,8 @@ clone and modify other peoples' ideas, or add them into your own.</p>
     <div class="hint">
         <h3>Survival</h3>
         <p>PCs may be lost or marooned away from their own kind, trying to stay alive and find a way home. Castaways can be transported by fantastic means and can find themselves in very strange places. Examples: John Carter of Mars Lost in Space, and Farscape. A large group of castaways might turn into a colony. And exiles are deliberate castaways.</p>
-        <p>Or PCs might man a lonely outpost in a dangerous land, or simply try to stay a live in a deadly, futuristic urban wasteland. PCs might be hated, hunted, or tracked by a relentless foe.</p>
+        <p>Or PCs might man a lonely outpost in a dangerous land, or simply try to stay a live in a deadly, futuristic urban wasteland. PCs might be hated, hunted, or tracked by a relentless foe.
+        Survival might also depend on meeting a special need, such as a vampire's need for blood.</p>
         <p>Survivors explore their environment, fight off attackers, and seek vital resources. They meet
         new friends and allies, and new enemies.</p>
     </div>
