--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@ clone and modify other peoples' ideas, or add them into your own.</p>
     </div>
     <div class="hint">
         <h3>Treasure Hunters</h3>
-        <p>Treasure hunters is popular in fiction and a straightforward source of adventures.</p><p>However, treasure hunters who are after the Big Score either get tired of failing, or succeed and retire. So don't count on treasure hunting alone for a long campaign.</p>
+        <p>Treasure hunting is popular in fiction and a straightforward source of adventures.</p><p>However, treasure hunters who are after the Big Score either get tired of failing, or succeed and retire. So don't count on treasure hunting alone for a long campaign.</p>
     </div>
 </div>
 <div class="field">
@@ -150,18 +150,18 @@ clone and modify other peoples' ideas, or add them into your own.</p>
    
     <p>Imaginary toys should be awesome.</p>
     <p>Imagine a player saying, "My character has an XYZ", or, "We use the XYZ". If you imagined them
-    smiling when they said it, your campaign world needs the XYZ.</p>
+    smiling when they said it, your campaign needs the XYZ.</p>
     <p>Of course, awesome doesn't have to mean powerful and perfect. Ask anyone to name three D&D wands, and
     one of them is sure to be Wand of Wonder.</p>
     <p>Common categories include...</p>
     <div class="short-hint">
         <h3>Weapons</h3>
-        <p>Many players like weapons. Big weapons. Powerful weapons. Strange and surprising weapons.
+        <p>Players like weapons. Big weapons. Powerful weapons. Strange and surprising weapons.
         Weapons that have unusual effects, or which make silly noises.</p>
     </div>
     <div class="short-hint">
         <h3>Ammunition</h3>
-        <p>Finding your third +1 sword isn't exciting. But everyone wants another box of grenades. But Ammunition, potions, rare spell components, dilithium crystals, and other useful consumables are 
+        <p>Finding your third +1 sword isn't exciting. But everyone wants another box of grenades. Ammunition, potions, rare spell components, dilithium crystals, and other useful consumables are 
         a GM's friend.</p>
     </div>
     <div class="short-hint">
@@ -189,9 +189,9 @@ clone and modify other peoples' ideas, or add them into your own.</p>
     </div>
     <div class="short-hint">
         <h3>Magic Items</h3>
-        <p>See Spells for notes on style. And for magic items, decide who gets to use them.</p>
+        <p>See Spells for notes on style.</p>
         <p>And magic items excel at quirkiness and unpredictability. They can do whatever you want... it's
-        magic.</p>
+        magic. And you decide who gets to use them.</p>
     </div>
     <div class="short-hint">
         <h3>Vehicles</h3>
@@ -221,7 +221,7 @@ clone and modify other peoples' ideas, or add them into your own.</p>
     </div>
     <div class="short-hint">
         <h3>Training</h3>
-        <p>Players care about increasing skills. So don't pass that off with some boring math. You
+        <p>Players care about increasing skills. Use that interest. You
         can have mentors, apprenticeships, schools, guilds, and the secret technique of any group.</p>
         <p>And magic and cyberpunk offer their own special options.</p>
     </div>
@@ -246,10 +246,10 @@ clone and modify other peoples' ideas, or add them into your own.</p>
 </div>
 <div class="field">
     <h2>Sides</h2>
-    <p>Groups or important individuals, or dragons or gods, etc. These can be outright foes, or anyone with interests different enough that you might have to negotiate with them.</p>
-    <p>Groups and include all the PCs, some of the PCs, or none of the PCs. They can be friend or foe,
-    large or small, fammiliar or strange, and strong or weak.
-    <p>And these are sources of many NPCs. Do yourself a favor and make them fun to play</p>
+    <p>Anyone with interests different enough that you might have to negotiate with them.</p>
+    <p>Groups can include all the PCs, some of the PCs, or none of the PCs. They can be friends or foes,
+    large or small, fammiliar or strange, and strong or weak.</p>
+    <p>These are sources of many NPCs. Do yourself a favor and make them fun to play</p>
     <div class="hint">
         <h3>Government</h3>
         
@@ -517,7 +517,7 @@ clone and modify other peoples' ideas, or add them into your own.</p>
 </div>
 <div class="field">
     <h2>First Adventures</h2>
-    <p>Sketch some adventures to draw the player into the world.</p>
+    <p>Sketch some adventures to draw the players into the world.</p>
 </div>
 <div class="field">
     <h2>Parts you love</h2>
